--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -57,12 +57,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HuffmanCodingDemo\HuffmanCodingDemo.csproj">
-      <Project>{1c87adcf-33af-4730-b6f3-1548872bc879}</Project>
-      <Name>HuffmanCodingDemo</Name>
+    <ProjectReference Include="..\HuffmanCodingCore\HuffmanCodingCore.csproj">
+      <Project>{66719aed-47c3-4b07-bdd7-95f16f69d9d6}</Project>
+      <Name>HuffmanCodingCore</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
