--- a/HuffmanCodingCore/HuffmanCodingCore.csproj
+++ b/HuffmanCodingCore/HuffmanCodingCore.csproj
@@ -41,13 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Decoder.cs" />
-    <Compile Include="Encoder.cs" />
+    <Compile Include="BitStream\BitStreamReader.cs" />
+    <Compile Include="BitStream\BitStreamWriter.cs" />
+    <Compile Include="Exceptions\DecodeException.cs" />
+    <Compile Include="Exceptions\EncodeException.cs" />
+    <Compile Include="CompressStreamWriter.cs" />
     <Compile Include="Iterators\BinaryTreeIterators\InIterator.cs" />
     <Compile Include="Iterators\BinaryTreeIterators\IteratorMode.cs" />
     <Compile Include="Iterators\BinaryTreeIterators\PostIterator.cs" />
     <Compile Include="Iterators\BinaryTreeIterators\PreIterator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structs\EncodeArgument\CompressLevel.cs" />
+    <Compile Include="Structs\EncodeArgument\EncryptType.cs" />
+    <Compile Include="CompressStreamReader.cs" />
+    <Compile Include="Utils\StreamWrapper.cs" />
     <Compile Include="Structs\BinaryTrees\BinaryTree.cs" />
     <Compile Include="Structs\BinaryTrees\Nodes\BinaryTreeNode.cs" />
     <Compile Include="Structs\HuffmanTrees\HuffmanTree.cs" />
@@ -55,6 +62,7 @@
     <Compile Include="Structs\HuffmanTrees\Nodes\Data\HuffmanTreeNodeData.cs" />
     <Compile Include="Structs\HuffmanTrees\Nodes\Data\IHuffmanTreeNode.cs" />
     <Compile Include="Structs\HuffmanTrees\Nodes\HuffmanTreeNode.cs" />
+    <Compile Include="Utils\ExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
