--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoreTest\CompressTest\CompressTest.cs" />
     <Compile Include="CoreTest\HuffmanTreesTest\TestHuffmanTree.cs" />
+    <Compile Include="CoreTest\UtilsTest\ExtensionMethodsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CoreTest\BinaryTreesTest\TestBinaryTree.cs" />
   </ItemGroup>
@@ -62,6 +64,7 @@
       <Name>HuffmanCodingCore</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
